# hol-light-wasm

./: .gitignore  .gitmodules  Makefile  README.md  dune  dune-project  example.ml  main.ml  prover.ml
runtime/: Cargo.toml
runtime/src/: main.rs  zarith.rs
scripts/: analyze_wat_functions.py
