[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
rug = "1.28.0"
wasmtime = { version = "37.0.2", default-features = false, features = [
    "runtime",
    "cranelift",
    "cache",
    "wat",
    "parallel-compilation",
    "profiling",
    "pooling-allocator",
    "coredump",
    "gc",
] }
wasmtime-wasi = { version = "37.0.2", default-features = false, features = [
    "p1",
] }

# Enable optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3
