[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
rug = "1.29.0"
wasmtime = { version = "47", default-features = false, features = [
    "runtime",
    "cranelift",
    "cache",
    "wat",
    "parallel-compilation",
    "profiling",
    "pooling-allocator",
    "coredump",
    "gc",
    "gc-drc",
] }
wasmtime-wasi = { version = "47", default-features = false, features = [
    "p1",
] }

# Enable optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3
